# centers

./: ChessBoardRTree.h  Makefile  README.md  centers.cpp  centers.h  chessBoardRtree.cpp  chessBoardRtree.h  contour.cpp  contour.h  contour3d.cpp  contour3d.h  contours.cpp  contours.h  contours3d.cpp  contours3d.h  disparity.cpp  disparity.h  dispatity.h  fframe.cpp  fframe.h  height.cpp  height.h  log.cpp  log.h  log_k.h  main.cpp  nearestPoint.cpp  nearestPoint.h  processor.cpp  processor.h  test.cpp  tests.cpp  tests.h
Centers/: CMakeLists.txt  Centers  main.cpp  splitter.h
resources/: 300x200.h264  300x200gs.h264  chessboard.json  install.sh  journal.ods  journal.txt  readme.txt  roi.txt
resources/20190524/: 1cam_2p_2  1cam_2p_3  1cam_2p_4  1cam_2p_5  2cam_2p_2  2cam_2p_3  2cam_2p_4  2cam_2p_5
resources/20190604/: 2019-06-04-09-44-02-l.avi  2019-06-04-09-44-02-r.avi  2019-06-04-09-57-58-l.avi  2019-06-04-09-57-58-r.avi
